# NFT-Swap-Infrastructure-Templates

./: .gitignore  README.md
dapp/: package-lock.json  package.json  specific_swap.js  swap-pool.js
dapp/keys/: readme.txt
dapp/public/images/: readme.txt
dapp/public/javascripts/: helpers.js  shared-resources.js  wallet-integration.js
dapp/public/stylesheets/: styles-random.css  styles.css
dapp/src/routes/: about.js  admin.js  api_address_assets.js  api_address_txs.js  api_asset_info.js  api_get_latest_steak_block.js  api_policy_asset_info.js  api_submit_swap_tx_cli.js  api_tx_status.js  index.js  random.js
dapp/src/views/: about.pug  admin.pug  error.pug  index.pug  random.pug
dapp/tmp/cardano-tx/: readme.txt
dapp/wallets/: readme.txt
doc/: building-the-smart-contracts.md  deploy-specific-swap-filtered.md  deploy-specific-swap.md  installing-plutus.md
docs/: install.md
smart-contracts/: LICENSE  RandomSwap.hs  RandomSwapQueue.hs  SpecificSwap.hs  SpecificSwapFiltered.hs  SpecificSwapTokenNameRule.hs  cabal.project  nft-swap-templates.cabal  readme.txt
smart-contracts/app/: specific-swap-filtered.hs  specific-swap.hs
smart-contracts/src/: SpecificSwap.hs  SpecificSwapFiltered.hs  Utils.hs
