Cabal-Version:      2.4
Name:               nft-swap-templates
Version:            0.1.0.0
Author:             CENT
Maintainer:         developer@cent.stakepoolcentral.com
Build-Type:         Simple
Copyright:          © 2022 CENT
License:            MIT
License-files:      LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     Utils
                     , SpecificSwap
                     , SpecificSwapFiltered
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , containers
                     , playground-common
                     , data-default
                     , cardano-api
                     , serialise
                     , bytestring
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-constraints
                     , plutus-tx-plugin
                     , plutus-tx
                     , text
                     , cardano-crypto-class
                     , cardano-ledger-core
                     , plutus-ledger-api
                     , freer-extras
                     , utf8-string
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable specific-swap
  main-is: specific-swap.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       base ^>= 4.14.1.0
                     , nft-swap-templates
                     , plutus-ledger
                     , aeson
                     , plutus-ledger-api
                     , plutus-tx
                     , cardano-api

executable specific-swap-filtered
  main-is: specific-swap-filtered.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       base ^>= 4.14.1.0
                     , nft-swap-templates
                     , plutus-ledger
                     , aeson
                     , plutus-ledger-api
                     , plutus-tx
                     , cardano-api

